# rotor

./: .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: cargo_benches.yml  checks.yml  ci.yml  codspeed.yml  rust.yml
benches/: lexer.rs  parser.rs
docs/: getting-started.html  hello-rotor.html  types-debunked.html  variables-and-constants.html
docs/assets/: styles.css
docs/assets/scripts/: styles.css
examples/: test.rt
src/: lib.rs  main.rs
src/globals/: handle_error.rs  lexer.rs  mod.rs
syntax/: djdkd.rl  djdkd.rt  jfwe.rt
tests/: t_lexer.rs  t_parser.rs
toolchain/: lib.rs  main.rs
toolchain/cli/: main.rs
toolchain/handle_error/: handle_error.rs  mod.rs
toolchain/lexer/: lexer.rs  mod.rs
toolchain/parser/: expr.rs  mod.rs  nodes.rs  parser.rs
tools/: bench_logs.sh
