[package]
name = "rotor"
version = "0.1.0"
edition = "2021"
license = "zlib/libpng"
description = "Rotor language toolchain"

[dependencies]

[dev-dependencies]
divan = { package = "codspeed-divan-compat", version = "*" }

[lib]
path = "toolchain/lib.rs"

[[bin]]
name = "rotor"
path = "toolchain/cli/main.rs"

[[bench]]
name = "lexer"
harness = false
